0.4.0:
Hiroshi Yamashita - Tue Apr 18 15:48:14 PDT 2000
 * Improved audio synchronization with longer movies (double rate_deal)
Sam Lantinga - Fri Apr 14 13:21:51 PDT 2000
 * Added support for SDL asynchronous blitting
 * Added support for FPS printing - see TIME_MPEG in video/MPEGvideo.cpp
Hiroshi Yamashita - Tue Apr 11 13:00:01 PDT 2000
 * Tuned MPEG_BUFFER_SIZE for slower systems.
Atsushi Yamagata - Tue Apr 11 12:50:45 PDT 2000
 * Added locale setting for gtv.
Hiroshi Yamashita - Tue Apr 11 09:59:11 PDT 2000
 * Fixed audio popping and floating point exceptions in layer2 audio.
Sam Lantinga - Tue Apr 11 06:55:53 PDT 2000
 * Ported to Win32.
Sam Lantinga - Sun Apr  9 16:42:47 PDT 2000
 * Use SDL 1.1.3 for hardware accelerated YUV overlay support.
Vivien Chappelier - Thu Apr  6 12:40:36 PDT 2000
 * Added MPEG streaming support - now plays many more MPEG streams.

0.3.5:
Sam Lantinga - Wed Apr  5 13:50:32 PDT 2000
 * MMX code is disabled by default, as it appears to be slower than C code.
Sam Lantinga - Thu Mar  9 19:51:13 PST 2000
 * Fixed a hang in MP3 playback if track plays all the way to the end.
Sam Lantinga - Wed Mar  8 11:01:16 PST 2000
 * Added 16-bit MMX dither/IDCT code from the NIST MPEG-2/DVD player.
   (http://home.germany.net/100-5083/)
 * Added 32-bit MMX dither code from the kmpg MPEG-1 player.
   (http://www.rhrk.uni-kl.de/~mvogt/linux/kmpg/)
Sam Lantinga - Wed Mar  8 07:25:33 PST 2000
 * Added the math library to configure.in
Hiroshi Yamashita - Mon Mar  6 07:48:35 PST 2000
 * Added audio information to the MPEG info.
 * Added support for videos starting with Video Start Code 0xe0 0xe2.
 * Added a fix for FreeBSD to ltmain.sh.
Sam Lantinga - Mon Mar  6 08:27:35 PST 2000
 * Fixed a potential starting crash in plaympeg.

0.3.4:
Sam Lantinga - Fri Mar  3 13:40:43 PST 2000
 * Split RPM into runtime and development packages.
 * Added smpeg-config script to tell where the development runtime is installed.
Sam Lantinga - Fri Mar  3 13:25:10 PST 2000